# Graphene

./: .gitignore  CMakeLists.txt  graphene.pro  graphenewindow.h  resources.qrc
graphene/: graphene.pro  graphenewindow.cpp  graphenewindow.ui  main.cpp
resources/: defaults.json
src/: graphenewindow.cpp  graphenewindow.h  graphenewindow.ui  main.cpp  notelistmodel.cpp  notelistmodel.h
src/common/: Configuration.cpp  Configuration.h  Logger.cpp  Logger.h
src/dao/: Bind.cpp  Bind.h  HtmlSerializer.cpp  HtmlSerializer.h  NoteBuilder.cpp  NoteBuilder.h  NoteListRepository.cpp  NoteListRepository.h
src/model/: Note.cpp  Note.h  NoteListModel.cpp  NoteListModel.h  note.cpp  note.h  notelistmodel.cpp
src/text/: GrapheneTextEdit.cpp  GrapheneTextEdit.h  GrapheneTextEdit.pri  HackishAsFuckHtmlFormatter.cpp  HackishAsFuckHtmlFormatter.h
src/timer/: SaveEventHandler.cpp  SaveEventHandler.h  TimerService.cpp  TimerService.h
src/utils/: Digest.cpp  Digest.h  NoteListManager.cpp  NoteListManager.h
src/view/: GrapheneListView.cpp  GrapheneListView.h  GrapheneListView.pri
src/window/: NoteListManager.cpp  NoteListManager.h  TextEditManager.cpp  TextEditManager.h  graphenewindow.cpp  graphenewindow.h  graphenewindow.ui
